--- a/package.json
+++ b/package.json
@@ -8,20 +8,23 @@
     "lint": "eslint --ext .ts,.js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint",
     "test": "jest",
-    "dev": "cross-env NODE_ENV=development nodemon server/index.ts --watch server",
+    "dev": "nuxt dev",
     "build": "tsc && nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/axios": "^5.5.4",
+    "@nuxtjs/dotenv": "^1.3.0",
+    "apicache": "^1.4.0",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "nuxt": "^2.0.0",
     "nuxt-property-decorator": "^2.3.0",
-    "ts-node": "^8.3.0"
+    "ts-node": "^8.3.0",
+    "vue-property-decorator": "^8.2.1"
   },
   "devDependencies": {
     "@nuxt/typescript": "^2.8.1",
